--- a/lobbies.html
+++ b/lobbies.html
@@ -56,6 +56,7 @@
                 <div class="lobby-name"></div>
                 <div class="lobby-address"></div>
                 <div class="lobby-owner"></div>
+                <div class="lobby-time"></div>
             </div>
             <table class="lobby-scoreboard">
                 <thead>
